    4DOS shell in addition to built-in shell. (Wengier)
  - Windows SDL2 builds now use same clipboard pasting
    method as Windows SDL1 builds by default instead of
    the BIOS function. A menu option "Use BIOS function
    for keyboard pasting" is added to "Shared clipboard
    functions" menu group (under "Main") to instead use
    the BIOS function for the clipboard pasting in both
    Windows SDL1 and SDL2 builds. (Wengier)
  - Added support for the clipboard device (CLIP$) and
    DOS clipboard API on non-Windows systems (they were
    previously only supported on the Windows platform).
    In Linux/macOS SDL1 builds only the read access is
    supported whereas Linux/macOS SDL2 builds support
    both read and write accesses. (Wengier)
  - Added "Paste Clipboard" button to the AUTOEXEC.BAT,
    CONFIG.SYS and 4DOS.INI sections in Configuration
    Tool for pasting clipboard contents. (Wengier)
  - Added a simple BIOS Setup Utlity, which will show
    a summary of the current system configuration and
    allow users to change the date and time. Press Del
    key at the BIOS boot screen to enter. (Wengier)
  - Added config option "showbasic" in [sdl] section
    which when set to false will hide DOSBox-X version
    number and running speed in the titlebar. (Wengier)
  - Added experimental option to load a VGA BIOS ROM
    image and execute it, instead of our own INT 10h
    emulation. If enabled, it will load the specific
    ROM file into C000:0000. If not specified, it
    will choose based on machine type. VGA BIOS ROM
    images (e.g. et4000.bin for Tseng ET4000 emulation)
    can be dumped from real hardware or downloaded from
    the PCem ROMs collection. It can be set with config
    option "vga bios rom image" in [video] section.
  - Improved handling for file- and record-locking
    for non-Windows platforms. Portions of the code
    are adopted from DOSEmu. (Wengier)
  - Improved handling for the setting "ansi.sys=false",